@@ -40,6 +40,6 @@ export ROOTENV_NO_HOME=1  #--- To be able to read correctly the TEnv class in RO
 echo "===============  Run the code  ================"
 
 source $ANALYSISCODE/SusyAnalysis/scripts/grid_up.sh
-run -l -j=$jop $1 $syst
+run -l -j=$jop -s=$syst $1
 
 
