@@ -12,7 +12,7 @@
 	<!--   <Path name="GRLxmlFile">SUSYTools/GRL/Moriond2013/data12_8TeV.periodAllYear_DetStatus-v58-pro14-01_DQDefects-00-00-33_PHYS_StandardGRL_All_Good.xml</Path> -->
         <Path name="GRLxmlFile">SusyAnalysis/GRL/data12_8TeV.periodB_DetStatus-v61-pro16_DQDefects-00-01-00_PHYS_StandardGRL_All_Good.xml</Path>  <!-- updated periodB GRL. Due to some job failures, not all lumiblocks are complete. --> 
 	<Pileup>
-            <Mode name="ApplyPileupReweighting">false</Mode>
+            <Mode name="ApplyPileupReweighting">true</Mode>
             <Path name="PileupReweightingConfigFolder">/nfs/at3/scratch/tripiana/StopAnalysis/anafiles/PileupRWfiles/</Path>
             <Path name="PileupReweightingIlumicalcFile">/nfs/at3/scratch/tripiana/StopAnalysis/anafiles/PileupRWfiles/ilumicalc_histograms_EF_xe80_tclcw_200842-215643.root</Path>		
             <PeriodConfig>MC12a</PeriodConfig>
@@ -23,7 +23,7 @@
         </LeptonEfficiency>
 
         <PdfRw>
-	  <Enable>true</Enable> 
+	  <Enable>false</Enable> 
 	  <ToBeamE>6.5</ToBeamE> <!-- Final beam energy (in TeV) -->
         </PdfRw>
         
@@ -75,7 +75,7 @@
                 <recoSF>true</recoSF>
                 <idSF>true</idSF>
                 <triggerSF>false</triggerSF>
-                <isoType>Loose</isoType> <!-- None,Loose,Medium,Tight -->
+                <isoType>None</isoType> <!-- None,Loose,Medium,Tight -->
             </region>
         </Electron>
         <Muon>
@@ -84,7 +84,7 @@
                 <PreselEtaCut>2.4</PreselEtaCut>
                 <RecoPtCut>6000.</RecoPtCut>
                 <RecoEtaCut>2.4</RecoEtaCut>
-                <isoType>Loose</isoType> <!-- None,Loose,Medium,Tight -->
+                <isoType>None</isoType> <!-- None,Loose,Medium,Tight -->
             </region>
         </Muon>
         <Jet>
